# toy-mlir

./: CMakeLists.txt  README.md  toyc.cpp
include/toy/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h
mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
parser/: AST.cpp
